# MoveSenseSDK-Linux

./: README.md
lib/: CMakeLists.txt  README.md  build.sh  clean.sh
lib/include/: Camera.h  CameraCmd.h  CameraMode.h  MoveSenseCamera.h  MoveSenseErrorCode.h
lib/src/: Camera.cpp  CtrlInf.cpp  MoveSenseCamera.cpp  VL4IF.cpp
samples/Sample_Cap_OpenCV/: CMakeLists.txt  README.MD  Sample_Cap_OpenCV.cpp  build.sh
samples/Sample_Cap_OpenCV/cmake-modules/: FindMOVESENSE.cmake
